fixed problem gaps new

--- a/src/pages/Clicker/Clicker.module.css
+++ b/src/pages/Clicker/Clicker.module.css
@@ -72,7 +72,4 @@
     flex: 1;
 }
 
-.progressBar {
-
-}
 
